Finish Text and language animation

--- a/src/entrance/entrance.html
+++ b/src/entrance/entrance.html
@@ -15,7 +15,7 @@
     </h1>
   </div>
   <div class="language">
-    <div class="language-2">
+    <div class="language-2" id="language">
       <h1>EN</h1>
       <h1>TH</h1>
     </div>
