Fsh Entrance page

--- a/src/entrance/entrance.html
+++ b/src/entrance/entrance.html
@@ -20,5 +20,8 @@
       <h1>TH</h1>
     </div>
   </div>
+  <div class="image">
+    <img src="../assets/arrow.png" id="arrow">
+  </div>
 </body>
 </html>
