--- a/src/entrance/entrance.html
+++ b/src/entrance/entrance.html
@@ -20,8 +20,8 @@
       <h1>TH</h1>
     </div>
   </div>
-  <div class="image">
+  <a href="../home/home.html" class="image">
     <img src="../assets/arrow.png" id="arrow">
-  </div>
+  </a>
 </body>
 </html>
