Add js function

--- a/src/home/home.html
+++ b/src/home/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three Column Layout</title>
+    <title>Home page</title>
     <link rel="stylesheet" href="home.css">
     <link href="../dist/output.css" rel="stylesheet">
     <link rel="stylesheet" href="../font/font.css">
@@ -17,11 +17,11 @@
             <div class="arrow-logo">
                 <img src="../assets/arrow.png" alt="">
             </div>
-            <h2>
+            <h2 id="headtext">
                 SS24
             </h2>
             <div class="text-inform">
-                <p>
+                <p id="informtext">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus alias ipsa officiis inventore aut laboriosam nam debitis distinctio assumenda neque eos quo fugiat beatae maiores, saepe est totam nihil ipsum ullam. Libero, vero. At cum corrupti exercitationem doloremque nisi. At dolorem quis recusandae doloremque hic minus, obcaecati illum repellat harum.
                 </p>
             </div>
@@ -35,5 +35,6 @@
             </div>
         </div>
     </div>
+    <script type="module" src="home.js"></script>
 </body>
 </html>
