--- a/src/home/home.html
+++ b/src/home/home.html
@@ -14,7 +14,7 @@
             <div class="text-borderline">
                 <h1>BORDERLINE</h1>
             </div>
-            <div class="arrow-logo">
+            <div class="arrow-logo" id="arrow">
                 <img src="../assets/arrow.png" alt="">
             </div>
             <h2 id="headtext">
